--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>Star Wars</title>
 	<meta name="description" content="Star Wars">
 	<meta name="author" content="Samuel Pineda">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
 
 	<link rel="stylesheet" href="css/normalize.css">
 	<link href="https://fonts.googleapis.com/css?family=Oswald:300,400" rel="stylesheet">
